fix z-index

--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -466,6 +466,18 @@
   left: 0;
 }
 
+.z-2 {
+  z-index: 2;
+}
+
+.z-9 {
+  z-index: 9;
+}
+
+.z-99 {
+  z-index: 99;
+}
+
 .z-999 {
   z-index: 999;
 }
@@ -492,6 +504,10 @@
 
 .right-20 {
   right: 20px;
+}
+
+.right-30 {
+  right: 30px;
 }
 
 .bg-blue-hover {
